[gd_scene load_steps=3 format=1]

[ext_resource path="res://scripts/ZDETut.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 43.1319, 41.2946 )

[node name="ZGETut" type="Area2D"]

transform/pos = Vector2( 970.006, 496.003 )
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 2, 4 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 2, 4 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="TutLabel" type="Label" parent="."]

visibility/visible = false
visibility/light_mask = 1024
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -109.0
margin/top = 66.0
margin/right = 101.0
margin/bottom = 114.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Deposit Zombie Guts Here
Until ZGE Unit is Full
(Check the Green Bar on the Unit)"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="body_enter" from="." to="." method="_on_ZGETut_body_enter"]

[connection signal="body_exit" from="." to="." method="_on_ZGETut_body_exit"]


